5 переход на ESP-NOW технологию/ТЕПЛИЦА/ошибки

Компиляция скетча...
"C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp-x32\\2511/bin/xtensa-esp32-elf-g++" -MMD -c "@C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/cpp_flags" -Os -Werror=return-type -DF_CPU=240000000L -DARDUINO=10607 -DARDUINO_ESP32_WROOM_DA -DARDUINO_ARCH_ESP32 "-DARDUINO_BOARD=\"ESP32_WROOM_DA\"" "-DARDUINO_VARIANT=\"esp32da\"" -DARDUINO_PARTITION_default "-DARDUINO_HOST_OS=\"windows\"" "-DARDUINO_FQBN=\"esp32:esp32:esp32da:UploadSpeed=921600,CPUFreq=240,FlashFreq=80,FlashMode=qio,FlashSize=4M,PartitionScheme=default,DebugLevel=none,LoopCore=1,EventsCore=1,EraseFlash=none\"" -DESP32=ESP32 -DCORE_DEBUG_LEVEL=0 -DARDUINO_RUNNING_CORE=1 -DARDUINO_EVENT_RUNNING_CORE=1 -DARDUINO_USB_CDC_ON_BOOT=0 "@C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/defines" "-IC:\\Users\\sasa\\AppData\\Local\\Temp\\.arduinoIDE-unsaved2026018-1184-1hawrz8.s2d7\\sketch_jan18b" -iprefix "C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/include/" "@C:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/flags/includes" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-9bb7aa84-v2\\esp32/qio_qspi/include" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\cores\\esp32" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\variants\\esp32da" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\WiFi\\src" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Network\\src" "-Ic:\\Users\\sasa\\Documents\\Arduino\\libraries\\ESP_Async_WebServer" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\FS\\src" "-Ic:\\Users\\sasa\\Documents\\Arduino\\libraries\\Async_TCP" "-Ic:\\Users\\sasa\\Documents\\Arduino\\libraries\\ArduinoJson\\src" "-IC:\\Users\\sasa\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.5\\libraries\\Hash\\src" "@C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\E2C07B48431A3D8E0E79822C5764CFD3/build_opt.h" "@C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\E2C07B48431A3D8E0E79822C5764CFD3/file_opts" "C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\E2C07B48431A3D8E0E79822C5764CFD3\\sketch\\sketch_jan18b.ino.cpp" -o "C:\\Users\\sasa\\AppData\\Local\\arduino\\sketches\\E2C07B48431A3D8E0E79822C5764CFD3\\sketch\\sketch_jan18b.ino.cpp.o"
C:\Users\sasa\AppData\Local\Temp\.arduinoIDE-unsaved2026018-1184-1hawrz8.s2d7\sketch_jan18b\sketch_jan18b.ino: In function 'void setup()':
C:\Users\sasa\AppData\Local\Temp\.arduinoIDE-unsaved2026018-1184-1hawrz8.s2d7\sketch_jan18b\sketch_jan18b.ino:167:30: error: invalid conversion from 'void (*)(const uint8_t*, const uint8_t*, int)' {aka 'void (*)(const unsigned char*, const unsigned char*, int)'} to 'esp_now_recv_cb_t' {aka 'void (*)(const esp_now_recv_info*, const unsigned char*, int)'} [-fpermissive]
  167 |     esp_now_register_recv_cb(OnDataRecv);
      |                              ^~~~~~~~~~
      |                              |
      |                              void (*)(const uint8_t*, const uint8_t*, int) {aka void (*)(const unsigned char*, const unsigned char*, int)}
In file included from C:\Users\sasa\AppData\Local\Temp\.arduinoIDE-unsaved2026018-1184-1hawrz8.s2d7\sketch_jan18b\sketch_jan18b.ino:1:
C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.5-9bb7aa84-v2\esp32/include/esp_wifi/include/esp_now.h:172:54: note:   initializing argument 1 of 'esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t)'
  172 | esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t cb);
      |                                    ~~~~~~~~~~~~~~~~~~^~
Используем библиотеку WiFi версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\WiFi 
Используем библиотеку Networking версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Network 
Используем библиотеку ESP Async WebServer версии 3.9.4 из папки: C:\Users\sasa\Documents\Arduino\libraries\ESP_Async_WebServer 
Используем библиотеку FS версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\FS 
Используем библиотеку Async TCP версии 3.4.10 из папки: C:\Users\sasa\Documents\Arduino\libraries\Async_TCP 
Используем библиотеку ArduinoJson версии 6.21.5 из папки: C:\Users\sasa\Documents\Arduino\libraries\ArduinoJson 
Используем библиотеку Hash версии 3.3.5 из папки: C:\Users\sasa\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.5\libraries\Hash 
exit status 1

Compilation error: invalid conversion from 'void (*)(const uint8_t*, const uint8_t*, int)' {aka 'void (*)(const unsigned char*, const unsigned char*, int)'} to 'esp_now_recv_cb_t' {aka 'void (*)(const esp_now_recv_info*, const unsigned char*, int)'} [-fpermissive]
